--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
                 const match = onclick.match(/showImageInfo\((\d+)\)/);
                 if (match) {
                     const imgId = match[1];
-                    const url = `https://jaskiniepolski.pgi.gov.pl/Details/RenderImage?id=${imgId}&zoom=0&ifGet=true`;
+                    const url = `https://jaskiniepolski.pgi.gov.pl/Details/RenderImage?id=${imgId}&zoom=4&ifGet=true`;
 
                     if (text.includes('plan') || text.includes('przekrój')) {
                         planOrPrzekroj.push(url);
@@ -228,6 +228,7 @@
             };
 
             container.innerHTML = `
+             <a href=${url}>Dane z jaskiniepolski.pgi.gov.pl</a>
             <div class="data-source-header">Dane z jaskiniepolski.pgi.gov.pl</div>
             <div><b>Nr inwentarzowy:</b> ${pgiInfo.nrInwentarzowy}</div>
             <div><b>Region:</b> ${pgiInfo.region}</div>
@@ -263,6 +264,8 @@
 
             const data = await response.json();
             let htmlContent = `<div class="data-source-header">Dane z Wikipedii</div>`;
+            htmlContent += `<a href="https://pl.wikipedia.org/wiki/${encodeURIComponent(caveName)}" >Wikipedia</a>`;
+
 
             if (data.extract) {
                 htmlContent += `<div class="description-text">${data.extract}</div>`;
